[package]
name = "nozokimi"
version = "0.1.0"
authors = ["Seiichi KONDO <seikichi@kmc.gr.jp>"]
edition = "2018"

[dependencies]
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
tokio = { git = "https://github.com/tokio-rs/tokio" }
tokio-tls = { git = "https://github.com/tokio-rs/tokio" }
native-tls = "0.2"
httparse = "1.3"
